--- a/Report/abstract.tex
+++ b/Report/abstract.tex
@@ -2,8 +2,7 @@
 \chapter*{}
 \vfill
 \begin{center}
-\textit{\textbf{\fontsize{30}{632}\selectfont -Hinweis-}}\\
+\textbf{\fontsize{30}{632}\selectfont Abstract}\\
 
-Die vorliegende Arbeit wurde als Gesamtleistung der Gruppe erarbeitet. Es soll keine Einzelbewertung anhand einzelner Kapitel vorgenommen werden. Sämtliche Benotung erfolgt gleichermaßen auf die ganze Gruppe.
 \end{center}
 \vfill
