--- a/Report/master.tex
+++ b/Report/master.tex
@@ -39,13 +39,13 @@
 %% PERSÖNLICHE ANGABEN (BITTE VOLLSTÄNDIG EINGEBEN zwischen den Klammern: {...})
 %%
 \ArtDerArbeit{Gruppen} % "Bachelor" oder "Projekt" wählen
-\TitelDerArbeit{Impossible Game}
+\TitelDerArbeit{Steuerung von Agenten in Videospielen basierend auf dem genetischen Algorithmus NEAT}
 \AutorDerArbeit{Amos Dinh, David Schäfer, Lasse Friedrich}
 %\Abteilung{<Ihre Abteilung>}
 %\Firma{<Ihre Firma>}
 \Kurs{WWI-21-DSA}
 \Studienrichtung{Data Science}
-\Matrikelnummer{TODO}
+\Matrikelnummer{5504890, 7086451, 9924680}
 \Studiengangsleiter{Prof. Dr.-Ing. habil. Dennis Pfisterer}
 \WissBetreuer{Dr. Maximilian Scherer}
 %\FirmenBetreuer{<Ihr(e) Firmenbetreuer(in)>}
@@ -198,8 +198,7 @@
 \input{chapter2}
 \input{chapter3}
 \input{chapter4}
-\input{chapter5}
-\input{chapter6}
+
 % Fazit und Ausblick
 %\input{conclusion}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
